# comic-crawler

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/comic_crawler/: __init__.py  __main__.py  config.py  exceptions.py  fetcher.py  logging.py  models.py  pipelines.py  storage.py
backend/src/comic_crawler/api/: __init__.py  app.py  dependencies.py  middleware.py  schemas.py
backend/src/comic_crawler/api/routers/: __init__.py  categories.py  comics.py  image_proxy.py  recommendations.py  search.py  sources.py  trending.py
backend/src/comic_crawler/spiders/: __init__.py  asura.py  base_fetcher.py  circuit_breaker.py  http_json_spider.py  mangadex.py  mangakakalot.py  mangakakalot_parser.py  orchestrator.py  parser.py  registry.py  search.py  truyenqq.py  truyenqq_parser.py  truyenqq_search.py  truyenvn.py  truyenvn_parser.py  truyenvn_search.py
backend/tests/: conftest.py  test_api.py  test_asura_spider.py  test_base_fetcher.py  test_circuit_breaker.py  test_config.py  test_fetcher.py  test_mangadex_spider.py  test_mangakakalot_spider.py  test_models.py  test_pipelines.py  test_registry.py  test_truyenvn_spider.py
docs/: cloudflare-pages.md  source-template.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
frontend/src/: App.tsx  (+3 more)
roadmap/: roadmap.md
(+90 files in other folders)
