[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comic-crawler"
version = "0.1.0"
description = "A comic web crawler built on Scrapling"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "scrapling[all]",
    "cachetools>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "rich>=13.0",

    "nodriver>=0.38",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "curl_cffi>=0.7",
    "slowapi>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "anyio>=4.0",
    "mypy>=1.0",
    "ruff>=0.8",
]

[project.scripts]
comic-crawler = "comic_crawler.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/comic_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
